<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.integratedmodelling</groupId>
	<artifactId>klab</artifactId>
	<version>0.10.0-SNAPSHOT</version>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
		<java.version>1.8</java.version>
		<!-- Careful here: geotools must be right for jgrasstools to work; JTS 
			should be the same one that geotools needs. -->
		<geotools.version>19-SNAPSHOT</geotools.version>
		<klab.version>0.10.0-SNAPSHOT</klab.version>
		<jgrasstools-version>0.8.1</jgrasstools-version>
		<jts.version>1.13</jts.version>
		<xtext.version>2.12.0</xtext.version>
		<h2gis.version>1.2.4</h2gis.version>
		<maven.compiler.source>1.8</maven.compiler.source>
		<maven.compiler.target>1.8</maven.compiler.target>

		<!-- the five below go together. Never change one without checking the 
			others -->
		<spring-boot-version>1.4.2.RELEASE</spring-boot-version>
		<spring-ldap-version>4.2.0.RELEASE</spring-ldap-version>
		<spring-version>4.3.4.RELEASE</spring-version>
		<junit-version>4.12</junit-version>
		<jackson-version>2.8.5</jackson-version>
		<!-- end versions that need to be in lock-step to avoid multiple Spring 
			issues -->

		<joda-time-version>2.3</joda-time-version>
		<javax.mail-api.version>1.5.2</javax.mail-api.version>
	</properties>

	<repositories>
		<repository>
			<id>osgeo</id>
			<name>Open Source Geospatial Foundation Repository</name>
			<url>http://download.osgeo.org/webdav/geotools/</url>
		</repository>
		<repository>
			<id>im</id>
			<name>Integrated Modelling Partnership Repository</name>
			<url>http://www.integratedmodelling.org/nexus/content/repositories/releases/</url>
		</repository>
		<repository>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<id>boundless</id>
			<name>Boundless Maven Repository</name>
			<url>http://repo.boundlessgeo.com/main</url>
		</repository>
	</repositories>


	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>2.10.3</version>
				<configuration>
					<additionalparam>-Xdoclint:none</additionalparam>
					<excludePackageNames>com.elet.dragonconsole.*:org.integratedmodelling.common.utils.jtopas.*</excludePackageNames>
				</configuration>
				<executions>
					<execution>
						<id>attach-javadocs</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<dependencies>

		<!-- COMMON DEPENDENCIES -->
		<!-- language support -->
		<dependency>
			<groupId>org.integratedmodelling</groupId>
			<artifactId>org.integratedmodelling.kim</artifactId>
			<version>0.10.0-SNAPSHOT</version>
		</dependency>
		<dependency>
			<groupId>org.integratedmodelling</groupId>
			<artifactId>org.integratedmodelling.kdl</artifactId>
			<version>0.10.0-SNAPSHOT</version>
		</dependency>

		<!-- boilerplate be damned; see if this is 100% painless to use in Eclipse. 
			Lombok isn't. <dependency> <groupId>com.google.auto.value</groupId> <artifactId>auto-value</artifactId> 
			<version>1.5</version> <scope>provided</scope> </dependency> -->

		<dependency>
			<groupId>com.verhas</groupId>
			<artifactId>license3j</artifactId>
			<version>1.0.7</version>
		</dependency>
		<dependency>
			<groupId>commons-io</groupId>
			<artifactId>commons-io</artifactId>
			<version>2.4</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-pool2</artifactId>
			<version>2.2</version>
		</dependency>
		<dependency>
			<groupId>commons-collections</groupId>
			<artifactId>commons-collections</artifactId>
			<version>3.2</version>
		</dependency>
		<dependency>
			<groupId>commons-codec </groupId>
			<artifactId>commons-codec </artifactId>
			<version>1.9</version>
		</dependency>
		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.6</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.eclipse.xtext/org.eclipse.xtext -->
		<dependency>
			<groupId>org.eclipse.xtext</groupId>
			<artifactId>org.eclipse.xtext</artifactId>
			<version>${xtext.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.eclipse.xtext/org.eclipse.xtext.util -->
		<dependency>
			<groupId>org.eclipse.xtext</groupId>
			<artifactId>org.eclipse.xtext.util</artifactId>
			<version>${xtext.version}</version>
		</dependency>
		<!-- https://mvnrepository.com/artifact/org.eclipse.xtext/org.eclipse.xtext.testing 
			Used in compile scope to provide simple, reentrant parser injector for repeated 
			calls to declaration parser. -->
		<dependency>
			<groupId>org.eclipse.xtext</groupId>
			<artifactId>org.eclipse.xtext.testing</artifactId>
			<version>${xtext.version}</version>
			<!-- <scope>test</scope> -->
		</dependency>
		<!-- for @Nullable and the like -->
		<dependency>
			<groupId>com.google.code.findbugs</groupId>
			<artifactId>jsr305</artifactId>
			<version>3.0.2</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
			<version>${spring-boot-version}</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.eclipse.jgit/org.eclipse.jgit -->
		<dependency>
			<groupId>org.eclipse.jgit</groupId>
			<artifactId>org.eclipse.jgit</artifactId>
			<version>4.4.0.201606070830-r</version>
		</dependency>
		<dependency>
			<groupId>joda-time</groupId>
			<artifactId>joda-time</artifactId>
			<version>${joda-time-version}</version>
		</dependency>

		<!-- fast, duplex multicast communication between clients and engines -->
		<dependency>
			<groupId>org.jgroups</groupId>
			<artifactId>jgroups</artifactId>
			<version>3.6.8.Final</version>
		</dependency>

		<!-- Command line tool dependencies -->
		<dependency>
			<groupId>net.sf.jopt-simple</groupId>
			<artifactId>jopt-simple </artifactId>
			<version>4.6</version>
		</dependency>

		<!-- CLIENT DEPENDENCIES -->
		<dependency>
			<groupId>org.apache.maven.shared</groupId>
			<artifactId>maven-invoker </artifactId>
			<version>2.2</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-exec</artifactId>
			<version>1.2</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.jscience/jscience -->
		<!-- https://mvnrepository.com/artifact/org.integratedmodelling/jscience -->
		<dependency>
			<groupId>org.integratedmodelling</groupId>
			<artifactId>jscience</artifactId>
			<version>4.3.1</version>
		</dependency>


		<!-- ENGINE DEPENDENCIES -->

		<!-- classpath scanning; this can be removed in favor of Spring's PathMatchingResourcePatternResolver, 
			but Spring shouldn't be needed in the embedded engine and the API is better 
			here. -->
		<dependency>
			<groupId>org.reflections</groupId>
			<artifactId>reflections</artifactId>
			<version>0.9.11</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/org.eclipse.january/org.eclipse.january 
			underlying implementation for non-distributed state storage -->
		<dependency>
			<groupId>org.eclipse.january</groupId>
			<artifactId>org.eclipse.january</artifactId>
			<version>2.1.0</version>
		</dependency>

		<dependency>
			<groupId>org.jgrapht</groupId>
			<artifactId>jgrapht-core </artifactId>
			<version>1.0.1</version>
		</dependency>

		<!-- OWL and DL reasoning -->
		<dependency>
			<groupId>net.sourceforge.owlapi</groupId>
			<artifactId>owlapi-distribution </artifactId>
			<version>3.4.4</version>
		</dependency>
		<dependency>
			<groupId>com.hermit-reasoner</groupId>
			<artifactId>org.semanticweb.hermit</artifactId>
			<version>1.3.8.4</version>
		</dependency>

		<!-- spatial H2 database -->
		<dependency>
			<groupId>org.orbisgis</groupId>
			<artifactId>h2spatial</artifactId>
			<version>1.2.4</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/args4j/args4j startup options parser -->
		<dependency>
			<groupId>args4j</groupId>
			<artifactId>args4j</artifactId>
			<version>2.33</version>
		</dependency>

		<!-- https://mvnrepository.com/artifact/com.google.protobuf/protobuf-java -->
		<dependency>
			<groupId>com.google.protobuf</groupId>
			<artifactId>protobuf-java</artifactId>
			<version>3.4.0</version>
		</dependency>

		<!-- GEOTOOLS mess starts -->
		<!-- <dependency> <groupId>org.geotools</groupId> <artifactId>gt-metadata</artifactId> 
			<version>${geotools.version}</version> </dependency> -->
		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-referencing</artifactId>
			<version>${geotools.version}</version>
		</dependency>
		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-epsg-hsql</artifactId>
			<version>${geotools.version}</version>
		</dependency>
		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-shapefile</artifactId>
			<version>${geotools.version}</version>
		</dependency>
		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-geotiff</artifactId>
			<version>${geotools.version}</version>
		</dependency>
		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-epsg-extension</artifactId>
			<version>${geotools.version}</version>
		</dependency>
		<!-- WFS missing after 17.x <dependency> <groupId>org.geotools</groupId> 
			<artifactId>gt-wfs</artifactId> <version>${geotools.version}</version> <exclusions> 
			<exclusion> <groupId>org.eclipse.emf</groupId> <artifactId>common</artifactId> 
			</exclusion> <exclusion> <groupId>org.eclipse.emf</groupId> <artifactId>ecore</artifactId> 
			</exclusion> </exclusions> </dependency> -->
		<!-- GEOTOOLS mess ends -->


	</dependencies>
</project>